--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/yup": "^0.26.30",
+    "axios": "^0.19.2",
+    "formik": "^2.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "yup": "^0.28.1"
   },
   "scripts": {
     "start": "react-scripts start",
